--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <canvas id="canvas"></canvas>
 
 
+    <script src="js/maps/tileAnimation.js"></script>
+    <script src="js/maps/map-1-1.js"></script>
+    <script src="js/maps/maps.js"></script>
     <script src="js/enemies.js"></script>
     <script src="js/player.js"></script>
     <script src="js/game.js"></script>
