--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <title>Gerard 64</title>
 </head>
+
 <body>
-<style>
-</style>
+    <style>
+    </style>
     <canvas id="canvas"></canvas>
 
 
@@ -16,10 +18,12 @@
     <script src="js/maps/tileAnimation.js"></script>
     <script src="js/maps/map-1-1.js"></script>
     <script src="js/maps/maps2.js"></script>
+    <!-- <script src="js/maps/maps.js"></script> -->
     <script src="js/enemies.js"></script>
     <script src="js/player.js"></script>
     <script src="js/game.js"></script>
     <script src="js/index.js"></script>
-    
+
 </body>
+
 </html>
