--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 
 
     <script src="js/maps/tiles.js"></script>
-    <script src="js/maps/tileAnimation.js"></script>
+    <script src="js/maps/tileAnimation2.js"></script>
+    <!-- <script src="js/maps/tileAnimation.js"></script> -->
     <script src="js/maps/map-1-1.js"></script>
     <script src="js/maps/maps2.js"></script>
     <!-- <script src="js/maps/maps.js"></script> -->
     <script src="js/enemies.js"></script>
     <script src="js/player.js"></script>
-    <script src="js/game.js"></script>
+    <script src="js/game2.js"></script>
+    <!-- <script src="js/game.js"></script> -->
     <script src="js/index.js"></script>
 
 </body>
