--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
     <script src="js/maps/map-1-1.js"></script>
     <script src="js/maps/maps2.js"></script>
     <!-- <script src="js/maps/maps.js"></script> -->
-    <script src="js/enemies.js"></script>
-    <script src="js/player.js"></script>
-    <script src="js/game2.js"></script>
+    <script src="js/enemies2.js"></script>
+    <!-- <script src="js/enemies.js"></script> -->
+    <script src="js/player2.js"></script>
+    <!-- <script src="js/player.js"></script> -->
+    <script src="js/game3.js"></script>
+    <!-- <script src="js/game2.js"></script> -->
     <!-- <script src="js/game.js"></script> -->
     <script src="js/index.js"></script>
 
