--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <!-- Game font -->
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Gerard 64</title>
 </head>
 
@@ -28,6 +30,10 @@
     <!-- <script src="js/game2.js"></script> -->
     <!-- <script src="js/game.js"></script> -->
     <script src="js/index.js"></script>
+
+    <!-- <script>
+        window.onload = game.loadAudio
+    </script> -->
 
 </body>
 
