--- a/index.html
+++ b/index.html
@@ -15,7 +15,41 @@
     </style>
     <canvas id="canvas"></canvas>
 
+    <div class="container">
 
+        <div class="pad">
+            <div id="direction-up"></div>
+            <div id="direction-right"></div>
+            <div id="direction-left"></div>
+            <div id="direction-down"></div>
+        </div>
+
+        <div class="menu">
+            <div class="decoration"></div>
+            <div class="decoration"></div>
+            <div class="decoration"></div>
+            <div class="decoration menu-buttons-container">
+                <div class="menu-button"></div>
+                <div class="menu-button"></div>
+            </div>
+            <div class="decoration"></div>
+        </div>
+
+        <div class="actions">
+            <div class="action-buttons-container">
+                <div class="action-button">
+                    <div id="action-button-a"></div>
+                </div>
+                <div class="action-button">
+                    <div id="action-button-b"></div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+    <script src="js/buttonsAnimations.js"></script>
     <script src="js/maps/tiles.js"></script>
     <script src="js/maps/tileAnimation.js"></script>
     <script src="js/maps/map-1-1.js"></script>
