Finished Game Start

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 </head>
 
 <body>
-    <style>
-    </style>
+ 
+    <div class="button-container">
+        <button id="startButton">Mamma Mia!</button>
+    </div>
+
+
     <canvas id="canvas"></canvas>
 
     <div class="container">
@@ -32,7 +36,6 @@
                 <div class="menu-button"></div>
                 <div class="menu-button"></div>
             </div>
-            <div class="decoration"></div>
         </div>
 
         <div class="actions">
@@ -45,9 +48,7 @@
                 </div>
             </div>
         </div>
-
     </div>
-
 
     <script src="js/buttonsAnimations.js"></script>
     <script src="js/maps/tiles.js"></script>
